@@ -1,3 +1,4 @@
+2/27/12 #3204, use plaintext (no html) for substance names in sim-sharing messages, to improve readability
 2/27/12 #3204, sim-sharing for custom radio buttons in Game Settings panel
 2/27/12 #3204, sim-sharing for game buttons
 2/27/12 print reactions for each level via the Developer menu
